<resources>
    <string name="app_name">Virtual Gym Buddy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="tab_current_program">Oggi</string>
    <string name="tab_programs">Programmi</string>
    <string name="tab_exercises">Esercizi</string>
    <string name="tab_stats">Stats</string>


    <string name="new_active_program_set">Programma impostato come attivo</string>


    <string name="pref_file_key">it.bsamu.VirtualGymBuddy.PREF_FILE</string>
    <string name="active_program_pref_key">ACTIVE_PROGRAM_ID</string>
    <string name="active_program">Attivo</string>

    <string name="dialog_exercise_name">Nome esercizio</string>
    <string name="dialog_exercise_pick_img">Scegli un\'immagine</string>
    <string name="dialog_exercise_title">Crea esercizio</string>

    <string name="create">Crea</string>
    <string name="cancel">Annulla</string>

    <string name="exercise_selection_title">Seleziona esercizio</string>


    <string name="rep_counter_text">Hai fatto</string>
    <string name="rep_counter_instructions">Posiziona il dispositivo sullo stack di pesi del macchinario che stai usando o, se stai usando i pesi liberi, all\'interno di un armband.</string>
    <string name="stop_set">Termina serie</string>

    <string name="dialog_program_title">Crea programma di allenamento</string>
    <string name="dialog_program_name">Nome programma</string>
    <string name="dialog_program_desc">Descrizione</string>

    <string name="rest_day">Nessun allenamento previsto per oggi. Buon riposo!</string>
    <string name="no_active_program">Non hai un programma di allenamento attivo. Per attivare un programma, fai tap lungo su di esso.</string>

    <string name="exercise_set_timestamp_label">Allenamento in data</string>


    <string name="training_day_exercise_sets">Serie</string>
    <string name="training_day_exercise_reps">Rep</string>
    <string name="training_day_exercise_rest">Recupero (secondi)</string>
    <string name="add_exercise">Aggiungi esercizio</string>
    <string name="training_set_weight">Peso</string>

    <string name="add_set_btn_label">Aggiungi serie</string>
    <string name="record_set_video_btn">Fai un video</string>
    <string name="count_reps_set_btn">Conta rep</string>

    <string name="done_training">Allenamento completato per oggi. Ottimo!</string>


    <string name="program_details_days_title">Giorni di allenamento</string>
    <string name="training_day">Allenamento del</string>
    <string name="add">Aggiungi</string>

    <string name="toast_exercise_created">Esercizio creato con successo</string>
    <string name="toast_program_created">Programma creato con successo</string>

    <string name="exercise_detail_empty">Le serie di questo esercizio per cui hai registrato un video appariranno qui.</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="option_get_place">Scegli posto</string>
    <string name="default_info_title">Default info</string>
    <string name="default_info_snippet">Default info snippet</string>
    <string name="pick_place">Scegli un posto</string>
    <string name="gym_lat_key">GYM_LAT</string>
    <string name="gym_lng_key">GYM_LNG</string>
    <string name="your_gym">La tua palestra</string>
    <string name="geofence_transition_invalid_type">INVALID TRANSITION TYPE</string>
    <string name="arrived_at_gym">Sei in palestra</string>
    <string name="notification_channel_id">VGYMBUD_NOTIFICATION_CHANNEL</string>
    <string name="start_working_out">Sei in palestra. Inizia ad allenarti!</string>
    <string name="total_gym_time">"Allenamento terminato!"</string>
    <string name="actual_train_time_this_week">Tempo trascorso allenandoti questa settimana</string>
    <string name="gym_time_this_week">Tempo trascorso in palestra questa settimana</string>
    <string name="select_gym_location">La tua palestra</string>
    <string name="gym_selected">impostata come la tua palestra</string>
    <string name="near_me">Posti vicini</string>
    <string name="left_the_gym">Hai lasciato la palestra</string>
    <string name="gym_time">Tempo in palestra</string>
    <string name="train_time">Durata allenamento</string>
    <string name="waste_less_gym_time_critical">Stai passando molto più tempo in palestra del tempo effettivo di allenamento. Perdi meno tempo quando sei in palestra!</string>
    <string name="waste_less_gym_time_normal">Il tempo che trascorri in palestra è un po\' più di quello che passi effettivamente ad allenarti. Prova a perdere meno tempo quando arrivi in palestra!</string>
    <string name="not_wasting_gym_time">Non stai perdendo tempo in palestra: il tempo che sei lì lo passi tutto ad allenarti. Complimenti!</string>
</resources>