<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:id="@+id/program_detail_container"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >
            <TextView
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FragmentTitle"
                android:id="@+id/program_detail_title"></TextView>
            <TextView
                android:gravity="center_horizontal"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/program_detail_description"></TextView>

            <TextView
                android:paddingTop="30dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/FragmentSubtitle"
                android:text="@string/program_details_days_title"
                android:id="@+id/program_detail_days_title"></TextView>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/program_detail_recyclerview"
                android:divider="@android:color/transparent"
                android:dividerHeight="1.5sp"
                android:paddingVertical="7.5sp"
                >
            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/training_day" />
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    android:id="@+id/day_of_week_selection"
                    >

                </Spinner>
            </LinearLayout>

            <Button
                android:id="@+id/add_training_day_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
            />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>