<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="10dp"
    android:id="@+id/training_day_detail_container"
    android:background="@color/cardview_light_background"
    android:orientation="vertical"
>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    style="@style/FragmentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:paddingRight="7dp"
                    android:text="@string/training_day" />

                <TextView
                    android:id="@+id/training_day_detail_position_title"
                    style="@style/FragmentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/training_day_position_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingVertical="10dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/training_day_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@android:color/transparent"
                android:dividerHeight="1.5sp"
                android:paddingVertical="7.5sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:visibility="visible">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_training_day_exercise_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/add_exercise"
                        app:icon="@drawable/ic_baseline_add_24"
                        app:iconGravity="textStart" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/training_day_exercise_controls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:columnCount="5"
                        android:orientation="horizontal"
                        android:paddingVertical="15dp"
                        android:rowCount="2">

                        <TextView
                            android:id="@+id/selected_exercise"
                            style="@style/CardTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_column="0"
                            android:layout_columnSpan="5"
                            android:layout_marginBottom="5dp"
                            android:layout_weight="1"
                            android:gravity="bottom" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_columnSpan="2"
                            android:layout_columnWeight="1"
                            android:layout_gravity="fill_horizontal"
                            android:hint="@string/training_day_exercise_sets">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/training_day_exercise_input_sets"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="3" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <ImageView
                            android:layout_height="wrap_content"
                            android:layout_columnSpan="1"
                            android:layout_gravity="center"
                            android:paddingHorizontal="5dp"
                            android:src="@drawable/ic_baseline_times_24" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_height="wrap_content"
                            android:layout_columnSpan="2"
                            android:layout_columnWeight="1"
                            android:layout_gravity="fill_horizontal"
                            android:hint="@string/training_day_exercise_reps">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/training_day_exercise_input_reps"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="number"
                                android:maxLength="3" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </GridLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/training_day_exercise_rest"
                        app:startIconDrawable="@drawable/ic_baseline_timer_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/training_day_exercise_input_rest"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/save_training_day_exercise_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/add"
                        app:icon="@drawable/ic_baseline_add_24"
                        app:iconGravity="textStart" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>